kubernetes/landing-page/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: landing-page
spec:
  selector:
    app: landing-page
  ports:
    - port: 80
      targetPort: 80
